# audionet

./: README.md  pyproject.toml
audionet/: __init__.py  cli.py  config.py  core.py  exceptions.py
tests/: __init__.py  conftest.py  test.csv  test_cli.py  test_config.py  test_core.py
